# splunk-app-lifecycle-copilot

./: .env.example  .gitignore  LICENSE  Makefile  README.md  SCOPE.md  UX_DEMO_PLAN.md  architecture_diagram.md  docker-compose.yml  pyproject.toml  smoke_test.py
demo/: appinspect_events.json  appinspect_provenance.jsonl  architecture_demo.md  demo_script.md  devpost_submission.md  onboarding_events.json  onboarding_provenance.jsonl  spl_lint_events.json  spl_lint_provenance.jsonl
demo/diagrams/: README.md
fixtures/appinspect/broken_app/: README.md
fixtures/appinspect/broken_app/default/: app.conf  outputs.conf
fixtures/onboarding/: EXPECTED_CIM_MAPPING.md  generate_upi_log.py
fixtures/spl_lint/: costly_search.spl
scripts/: demo.sh
src/lifecycle_copilot/: __init__.py  cli.py  diagnosis.py  events.py  provenance.py  self_heal.py  server.py
src/lifecycle_copilot/appinspect/: __init__.py  loop.py  parser.py  patchers.py  runner.py
src/lifecycle_copilot/onboarding/: __init__.py  candidates.py  hec.py  loop.py  mcp_client.py  models.py  patchers.py  validator.py
src/lifecycle_copilot/spl_lint/: __init__.py  loop.py  patchers.py  rules.py
tests/: test_appinspect_loop.py  test_appinspect_parser.py  test_appinspect_patchers.py  test_mcp_client.py  test_onboarding_candidates.py  test_onboarding_loop.py  test_onboarding_validator.py  test_server_live.py  test_spl_lint_loop.py  test_spl_lint_rules.py
ui/dashboard/: index.html  package.json  tsconfig.json  vite.config.ts
ui/dashboard/src/: App.tsx  styles.css  types.ts
ui/dashboard/src/data/: demo.ts
(+4 files in other folders)
