[project]
name = "splunk-app-lifecycle-copilot"
version = "0.1.0"
description = "Hackathon MVP for self-healing Splunk onboarding and AppInspect loops."
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
dependencies = [
  "mcp>=1.27,<2",
  "pydantic>=2.7,<3",
  "python-dotenv>=1.0,<2",
  "requests>=2.31,<3",
  "rich>=13.7,<14",
  "splunk-appinspect>=4.2.1,<5",
  "splunk-sdk[ai]>=3.0.0,<4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "ruff>=0.4,<1",
]

[project.scripts]
copilot = "lifecycle_copilot.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 100
